--- a/app/src/main/res/layout/list_item_location_selection.xml
+++ b/app/src/main/res/layout/list_item_location_selection.xml
@@ -5,19 +5,19 @@
 
     <data>
         <variable
-            name="city"
+            name="location"
             type="ru.gmasalskih.weather3.data.entity.Location" />
 
         <variable
             name="clickListener"
-            type="ru.gmasalskih.weather3.screens.city_selection.SelectionCityListAdapter.SelectionCityClickListener" />
+            type="ru.gmasalskih.weather3.screens.location_selection.SelectionLocationsListAdapter.SelectionLocationClickListener" />
     </data>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
-        android:onClick="@{()->clickListener.onClick(city)}"
+        android:onClick="@{()->clickListener.onClick(location)}"
         app:cardCornerRadius="4dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:textSize="14sp"
-                app:cityName="@{city}"
+                app:locationName="@{location}"
                 app:layout_constraintBottom_toTopOf="@+id/address_line"
                 app:layout_constraintEnd_toStartOf="@+id/country_name_code"
                 app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                app:cityAddressLine="@{city}"
+                app:locationAddressLine="@{location}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/country_name_code"
                 app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="30sp"
-                app:cityCountyCode="@{city}"
+                app:locationCountyCode="@{location}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
@@ -65,8 +65,5 @@
                 tools:hint="RU" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
     </androidx.cardview.widget.CardView>
-
 </layout>
