--- a/app/src/main/res/layout/fragment_location_web_page.xml
+++ b/app/src/main/res/layout/fragment_location_web_page.xml
@@ -4,18 +4,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".screens.city_web_page.CityWebPageFragment">
+    tools:context=".screens.location_web_page.LocationWebPageFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="CityWebPageFragment"
+            android:text="LocationWebPageFragment"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
