--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -14,7 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <TextView
             android:id="@+id/timestamp"
             android:layout_width="0dp"
@@ -92,43 +91,42 @@
             tools:hint="80%" />
 
         <TextView
-            android:id="@+id/city_name"
+            android:id="@+id/location_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:gravity="center"
-            android:onClick="@{()-> viewModel.onCitySelect()}"
+            android:onClick="@{()-> viewModel.onLocationSelect()}"
             android:text="@{viewModel.currentLocation.name}"
             android:textSize="36sp"
-            app:layout_constraintBottom_toTopOf="@+id/city_web_page"
+            app:layout_constraintBottom_toTopOf="@+id/location_web_page"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/temp"
             tools:hint="City #1" />
 
         <ImageView
-            android:id="@+id/city_web_page"
+            android:id="@+id/location_web_page"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginBottom="32dp"
             android:src="@drawable/ic_language_black_24dp"
-            android:onClick="@{() -> viewModel.onCityWebPageSelect()}"
+            android:onClick="@{() -> viewModel.onLocationWebPageSelect()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
-            android:id="@+id/favorite_city"
+            android:id="@+id/favorite_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="32dp"
             android:src="@drawable/ic_favorite_border_black_24dp"
-            android:onClick="@{() -> viewModel.onToggleFavoriteCity()}"
+            android:onClick="@{() -> viewModel.onToggleFavoriteLocation()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </layout>
