--- a/app/src/main/res/layout/list_item_favorite_location.xml
+++ b/app/src/main/res/layout/list_item_favorite_location.xml
@@ -6,12 +6,12 @@
 
     <data>
         <variable
-            name="city"
+            name="location"
             type="ru.gmasalskih.weather3.data.entity.Location" />
 
         <variable
             name="clickListener"
-            type="ru.gmasalskih.weather3.screens.favorite_city.FavoriteCityListAdapter.FavoriteCityClickListener" />
+            type="ru.gmasalskih.weather3.screens.favorite_location.FavoriteLocationListAdapter.FavoriteLocationClickListener" />
     </data>
 
     <androidx.cardview.widget.CardView
@@ -26,52 +26,50 @@
             android:layout_margin="8dp">
 
             <TextView
-                android:id="@+id/city_name"
+                android:id="@+id/location_name"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
-                app:cityName="@{city}"
+                app:locationName="@{location}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:hint="City" />
+                tools:hint="Location" />
 
             <TextView
-                android:id="@+id/city_lat"
+                android:id="@+id/location_lat"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:cityLat="@{city}"
-                app:layout_constraintBottom_toBottomOf="@+id/city_name"
+                app:locationLat="@{location}"
+                app:layout_constraintBottom_toBottomOf="@+id/location_name"
                 app:layout_constraintEnd_toStartOf="@+id/favorite_icon"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/city_name"
-                app:layout_constraintTop_toBottomOf="@+id/city_lon"
-                tools:hint="city_lat" />
+                app:layout_constraintStart_toEndOf="@+id/location_name"
+                app:layout_constraintTop_toBottomOf="@+id/location_lon"
+                tools:hint="location_lat" />
 
             <TextView
-                android:id="@+id/city_lon"
+                android:id="@+id/location_lon"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:cityLon="@{city}"
-                app:layout_constraintBottom_toTopOf="@+id/city_lat"
+                app:locationLon="@{location}"
+                app:layout_constraintBottom_toTopOf="@+id/location_lat"
                 app:layout_constraintEnd_toStartOf="@+id/favorite_icon"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/city_name"
-                app:layout_constraintTop_toTopOf="@+id/city_name"
-                tools:hint="city_lon" />
+                app:layout_constraintStart_toEndOf="@+id/location_name"
+                app:layout_constraintTop_toTopOf="@+id/location_name"
+                tools:hint="location_lon" />
 
             <ImageView
                 android:id="@+id/favorite_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="@{()->clickListener.onClick(city)}"
+                android:onClick="@{()->clickListener.onClick(location)}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_delete_forever_black_24dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     </androidx.cardview.widget.CardView>
 </layout>
-
