--- a/app/src/main/res/menu/navdrawer_menu.xml
+++ b/app/src/main/res/menu/navdrawer_menu.xml
@@ -3,9 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/favoriteCityFragment"
+        android:id="@+id/favoriteLocationFragment"
         android:icon="@drawable/ic_favorite_border_black_24dp"
-        android:title="@string/favorite_city" />
+        android:title="@string/favorite_location" />
     <item
         android:id="@+id/settingsFragment"
         android:icon="@drawable/ic_settings_black_24dp"
