--- a/app/src/main/res/menu/navdrawer_menu.xml
+++ b/app/src/main/res/menu/navdrawer_menu.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
 
-    <item
-        android:id="@+id/favoriteLocationFragment"
-        android:icon="@drawable/ic_favorite_border_black_24dp"
-        android:title="@string/favorite_location" />
-    <item
-        android:id="@+id/settingsFragment"
-        android:icon="@drawable/ic_settings_black_24dp"
-        android:title="@string/settings" />
-    <item
-        android:id="@+id/aboutFragment"
-        android:icon="@drawable/ic_bookmark_border_black_24dp"
-        android:title="@string/about" />
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/favoriteLocationFragment"
+            android:icon="@drawable/ic_favorite_border_black_24dp"
+            android:title="@string/favorite_location" />
+        <item
+            android:id="@+id/settingsFragment"
+            android:icon="@drawable/ic_settings_black_24dp"
+            android:title="@string/settings" />
+        <item
+            android:id="@+id/aboutFragment"
+            android:icon="@drawable/ic_bookmark_border_black_24dp"
+            android:title="@string/about" />
+    </group>
+
 </menu>
