--- a/app/src/main/res/layout/fragment_location_web_page.xml
+++ b/app/src/main/res/layout/fragment_location_web_page.xml
@@ -10,11 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textView6"
+        <WebView
+            android:id="@+id/web_page_weather"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="LocationWebPageFragment"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
