--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -5,6 +5,7 @@
     tools:context=".screens.weather.WeatherFragment">
 
     <data>
+
         <variable
             name="viewModel"
             type="ru.gmasalskih.weather3.screens.weather.WeatherViewModel" />
@@ -22,19 +23,18 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="32dp"
             android:gravity="center"
-            android:text="@{viewModel.currentWeather.timestamp}"
             android:onClick="@{() -> viewModel.onDateSelect()}"
+            android:text="@{viewModel.currentWeather.timestamp}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:hint="2020.01.01" />
 
-        <ImageView
+
+        <WebView
             android:id="@+id/weather_icon"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:layout_marginTop="32dp"
-            android:src="@drawable/ic_wb_sunny_black_24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/timestamp" />
@@ -112,8 +112,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginBottom="32dp"
-            android:src="@drawable/ic_language_black_24dp"
             android:onClick="@{() -> viewModel.onLocationWebPageSelect()}"
+            android:src="@drawable/ic_language_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -123,8 +123,8 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="32dp"
-            android:src="@drawable/ic_favorite_border_black_24dp"
             android:onClick="@{() -> viewModel.onToggleFavoriteLocation()}"
+            android:src="@drawable/ic_favorite_border_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
