--- a/app/src/main/res/layout-land/fragment_weather.xml
+++ b/app/src/main/res/layout-land/fragment_weather.xml
@@ -31,7 +31,7 @@
             app:layout_constraintTop_toTopOf="@+id/weather_icon"
             tools:hint="2020.01.01" />
 
-        <WebView
+        <ImageView
             android:id="@+id/weather_icon"
             android:layout_width="200dp"
             android:layout_height="200dp"
