--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -35,7 +35,9 @@
             android:id="@+id/weather_icon"
             android:layout_width="200dp"
             android:layout_height="200dp"
+            app:layout_constraintBottom_toTopOf="@+id/temp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/timestamp" />
 
@@ -43,10 +45,10 @@
             android:id="@+id/temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
             android:text="@{@string/temp_format(viewModel.currentWeather.temp)}"
             android:textSize="42sp"
+            app:layout_constraintBottom_toTopOf="@+id/location_name"
             app:layout_constraintEnd_toStartOf="@+id/wind_speed"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -102,6 +104,7 @@
             android:textSize="36sp"
             app:layout_constraintBottom_toTopOf="@+id/location_web_page"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/temp"
             tools:hint="City #1" />
