--- a/app/src/main/res/layout/list_item_location_selection.xml
+++ b/app/src/main/res/layout/list_item_location_selection.xml
@@ -26,7 +26,7 @@
             android:layout_margin="8dp">
 
             <TextView
-                android:id="@+id/city_name"
+                android:id="@+id/location_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -48,7 +48,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/country_name_code"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/city_name"
+                app:layout_constraintTop_toBottomOf="@+id/location_name"
                 tools:hint="Russia" />
 
             <TextView
