--- a/app/src/main/res/layout/list_item_location_selection.xml
+++ b/app/src/main/res/layout/list_item_location_selection.xml
@@ -27,41 +27,50 @@
 
             <TextView
                 android:id="@+id/location_name"
-                android:layout_width="0dp"
+                android:layout_width="349dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
                 android:textSize="14sp"
-                app:locationName="@{location}"
                 app:layout_constraintBottom_toTopOf="@+id/address_line"
-                app:layout_constraintEnd_toStartOf="@+id/country_name_code"
+                app:layout_constraintEnd_toEndOf="@+id/address_line"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_chainStyle="spread"
+                app:locationName="@{location}"
                 tools:hint="City" />
 
             <TextView
                 android:id="@+id/address_line"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                app:locationAddressLine="@{location}"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_height="19dp"
+                app:layout_constraintBottom_toTopOf="@+id/location_id"
                 app:layout_constraintEnd_toStartOf="@+id/country_name_code"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/location_name"
+                app:locationAddressLine="@{location}"
                 tools:hint="Russia" />
+
+            <TextView
+                android:id="@+id/location_id"
+                android:layout_width="349dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/address_line"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/address_line"
+                app:locationID="@{location}"
+                tools:hint="ID" />
 
             <TextView
                 android:id="@+id/country_name_code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="30sp"
-                app:locationCountyCode="@{location}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:locationCountyCode="@{location}"
                 tools:hint="RU" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
