--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -10,14 +10,48 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
+            android:id="@+id/remove_location_tv"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="SettingsFragment"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/remove_locations"
+            app:layout_constraintBottom_toBottomOf="@+id/remove_location_btn"
+            app:layout_constraintEnd_toStartOf="@+id/remove_location_btn"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/remove_location_btn" />
+
+        <TextView
+            android:id="@+id/remove_favorite_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/remove_favorites_locations"
+            app:layout_constraintBottom_toBottomOf="@+id/remove_favorite_btn"
+            app:layout_constraintEnd_toStartOf="@+id/remove_favorite_btn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/remove_favorite_btn" />
+
+        <Button
+            android:id="@+id/remove_location_btn"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/clear"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/remove_favorite_btn"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/remove"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/remove_location_btn" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
